--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,7 @@ jobs:
         id: cache
         with:
           path: ${{ env.pythonLocation }}/lib/python3.11/site-packages/*
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-test.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
@@ -86,7 +86,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python3.11 -m pip install --upgrade pip;
-          pip install -r requirements.txt;
+          pip install -r requirements-test.txt;
 
       - name: Run tests
         env:
