--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           python-version: '3.11.2'
           cache: 'pip'
+          cache-dependency-path: '**/requirements-test.txt'
 
       - name: Verify Python with Black
         uses: psf/black@stable
