--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           python-version: '3.11.2'
           cache: 'pip'
+          cache-dependency-path: '**/requirements-test.txt'
 
       - name: Verify Python with flake8 
         uses: py-actions/flake8@v2
