--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           python-version: '3.11.2'
           cache: 'pip'
+          cache-dependency-path: '**/requirements-test.txt'
       
       - name: Setup caching
         uses: actions/cache@master
