--- a/pytest.ini
+++ b/pytest.ini
@@ -9,4 +9,5 @@ markers =
 	members: associated with utub member addition and removal
 	splash: associated with login, register, email validation, passwords
 	unit: associated with unit tests
+	cli: associated with mock data creation and db management
 
