--- a/DockerfileDev
+++ b/DockerfileDev
@@ -22,26 +22,28 @@ RUN set -ex \
 	&& apt-get clean -y \
 	&& rm -rf /var/lib/apt/lists/*
 
-# Change ownership to newly created user
+# Copy files needed
+COPY run.py ./
+COPY src/ ./src/
+COPY migrations/ ./migrations/
+COPY tests/ ./tests/
+
+# Copy requirements files
+COPY requirements-dev.txt ./
+COPY requirements-test.txt ./
+COPY requirements-prod.txt ./
+
+# Change ownership to u4i-host user
 RUN chown -R u4i-host:u4i-host-group /code
 
 # Create a non-root user
 USER u4i-host
 
 # Install development level requirements
-COPY requirements-dev.txt ./
-COPY requirements-test.txt ./
-COPY requirements-prod.txt ./
-COPY compose-dev.yaml ./
 RUN python3 -m venv venv \
 	&& . venv/bin/activate \
 	&& pip install -r requirements-dev.txt --no-cache-dir
 
-# Copy files needed
-COPY run.py ./
-COPY src/ ./src/
-COPY migrations/ ./migrations/
-COPY tests/ ./tests/
 
 # Expose a port to access the container
 EXPOSE 5000
