--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -12,7 +12,7 @@ Flask==2.3.2
 Flask-Limiter==3.5.0
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
-Flask-Session==0.5.0
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.0.0
 Flask-WTF==1.1.1
 greenlet==2.0.2
@@ -26,6 +26,7 @@ mailjet-rest==1.3.4
 Mako==1.2.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+msgspec==0.18.6
 mdurl==0.1.2
 nodeenv==1.8.0
 ordered-set==4.1.0
