--- a/pytest.ini
+++ b/pytest.ini
@@ -5,9 +5,9 @@ filterwarnings =
 markers =
 	tags: associated with utub tags
 	urls: associated with utub urls
-	utubs: associated with utub generation and deletion
+	utubs: associated with utubs
 	members: associated with utub member addition and removal
 	splash: associated with login, register, email validation, passwords
 	unit: associated with unit tests
 	cli: associated with mock data creation and db management
-
+	splash_ui: associated with splash page UI
