--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -36,6 +36,9 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - MAILJET_API_KEY=${MAILJET_API_KEY}
+      - MAILJET_SECRET_KEY=${MAILJET_SECRET_KEY}
+      - BASE_EMAIL=${BASE_EMAIL}
     volumes:
       - pgdata:/var/lib/postgresql/data
 
