--- a/compose-local.yaml
+++ b/compose-local.yaml
@@ -24,13 +24,14 @@ services:
     volumes:
       - ./run.py:/code/u4i/run.py
       - ./src:/code/u4i/src
+      - ./tests:/code/u4i/tests
+      - ./migrations:/code/u4i/migrations
 
     # Sleep for 5 seconds to allow postgres image to start if necessary
     command: >
       sh -c "
       sleep 5 &&
       . /code/venv/bin/activate &&
-      which python &&
       flask db upgrade &&
       flask run --host=0.0.0.0 --port=5000
       "
