Home page tests complete. Refactored assert_login

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,4 @@ markers =
 	unit: associated with unit tests
 	cli: associated with mock data creation and db management
 	splash_ui: associated with splash page UI
+	home_ui: associated with home page UI
