--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
           - [6, 'UTub Tags Integration Tests']
           - [7, 'CLI Integration Tests']
           - [8, 'UI Splash Functional Tests']
-          # - [9, 'UI Home Functional Tests']
+          - [9, 'UI Home Functional Tests']
           # - [10, 'UI UTub Functional Tests']
           # - [11, 'UI Member Functional Tests']
           # - [12, 'UI UTub URL Functional Tests']
