--- a/DockerfileDev
+++ b/DockerfileDev
@@ -18,10 +18,28 @@ RUN set -ex \
 	&& adduser --system --uid 1001 --gid 1001 --no-create-home u4i-host \
 	&& apt-get update \
 	&& apt-get -y install libpq-dev gcc \
+	&& apt-get install -y wget unzip xvfb libglib2.0-dev libnss3-dev libdbus-1-dev  libatk1.0-0 libatk-bridge2.0-0 libcups2 libxkbcommon-dev libxcomposite-dev libxdamage-dev libgbm-dev libpangocairo-1.0-0 libasound2 \
 	&& apt-get upgrade -y \
 	&& apt-get autoremove -y \
 	&& apt-get clean -y \
 	&& rm -rf /var/lib/apt/lists/*
+
+# Install chrome
+RUN wget https://storage.googleapis.com/chrome-for-testing-public/130.0.6723.116/linux64/chrome-linux64.zip && \
+	unzip chrome-linux64.zip -d /usr/local/bin/ && \
+	chmod +x /usr/local/bin/chrome-linux64
+ENV PATH="/usr/local/bin/chrome-linux64:$PATH"
+
+# Install ChromeDriver
+RUN wget https://storage.googleapis.com/chrome-for-testing-public/130.0.6723.116/linux64/chromedriver-linux64.zip && \
+    unzip chromedriver-linux64.zip -d /usr/local/bin/ && \
+    chmod +x /usr/local/bin/chromedriver-linux64
+ENV PATH="/usr/local/bin/chromedriver-linux64:$PATH"
+
+# Set environment variables for selenium
+ENV SE_CACHE_PATH=/tmp/.cache/selenium
+ENV SE_BROWSER_PATH=/usr/local/bin/chrome64-linux/chrome
+RUN mkdir -p /tmp/.cache/selenium && chmod -R 777 /tmp/.cache/selenium
 
 # Copy files needed
 COPY run.py ./
