Add create/update/access URLs UI tests to GH actions

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,4 @@ markers =
 	cli: associated with mock data creation and db management
 	splash_ui: associated with splash page UI
 	home_ui: associated with home page UI
+	urls_ui: associated with URL UI on home page
