--- a/pytest.ini
+++ b/pytest.ini
@@ -12,4 +12,6 @@ markers =
 	cli: associated with mock data creation and db management
 	splash_ui: associated with splash page UI
 	home_ui: associated with home page UI
+	utubs_ui: associated with utubs UI on home page
+	members_ui: associated with members UI on home page
 	urls_ui: associated with URL UI on home page
