--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -86,14 +86,14 @@ jobs:
               docker compose -f compose.yaml pull;
               mkdir ./secrets/;
               chmod 600 ./secrets/;
-              echo "${{ secrets.PROD_DB_USER }}" > ./secrets/PROD_DB_USER
-              echo "${{ secrets.PROD_DB_NAME }}" > ./secrets/PROD_DB_NAME
-              echo "${{ secrets.PROD_DB_PASSWORD }}" > ./secrets/PROD_DB_PASSWORD
-              echo "${{ secrets.REDIS_PASSWORD }}" > ./secrets/REDIS_PASSWORD
-              echo "${{ secrets.MAILJET_API_KEY }}" > ./secrets/MAILJET_API_KEY
-              echo "${{ secrets.MAILJET_SECRET_KEY }}" > ./secrets/MAILJET_SECRET_KEY
-              echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL
-              echo "$(openssl rand 64 | base64 --wrap=0 | tr -d '+')" > ./secrets/SECRET_KEY
+              echo "${{ secrets.PROD_DB_USER }}" > ./secrets/PROD_DB_USER;
+              echo "${{ secrets.PROD_DB_NAME }}" > ./secrets/PROD_DB_NAME;
+              echo "${{ secrets.PROD_DB_PASSWORD }}" > ./secrets/PROD_DB_PASSWORD;
+              echo "${{ secrets.REDIS_PASSWORD }}" > ./secrets/REDIS_PASSWORD;
+              echo "${{ secrets.MAILJET_API_KEY }}" > ./secrets/MAILJET_API_KEY;
+              echo "${{ secrets.MAILJET_SECRET_KEY }}" > ./secrets/MAILJET_SECRET_KEY;
+              echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL;
+              echo "$(openssl rand 64 | base64 --wrap=0 | tr -d '+')" > ./secrets/SECRET_KEY;
               echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin;
               docker compose -f compose.yaml up --force-recreate --build -d;
               rm -rf ./secrets;
