Make changes to permissions for secrets folder

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -84,8 +84,8 @@ jobs:
               ssh -T -q -o StrictHostKeyChecking=no ${{ secrets.PROD_SSH_HOST }} '
               cd /home/u4i/;
               docker compose -f compose.yaml pull;
-              mkdir ./secrets/;
-              chmod 600 ./secrets/;
+              mkdir -p ./secrets/;
+              chmod 700 ./secrets/;
               echo "${{ secrets.PROD_DB_USER }}" > ./secrets/PROD_DB_USER;
               echo "${{ secrets.PROD_DB_NAME }}" > ./secrets/PROD_DB_NAME;
               echo "${{ secrets.PROD_DB_PASSWORD }}" > ./secrets/PROD_DB_PASSWORD;
